@@ -8,6 +8,7 @@ option ( ENABLE_TESTS "Generate unit test target" ON )
 option ( ENABLE_SANDBOX "Generate sandbox target" ON )
 option ( ENABLE_EXAMPLES "Generate example targets" ON )
 option ( ENABLE_LINTER "Enable clang-tidy on lib target" OFF )
+option ( ENABLE_LEGACY_ANIMATION "Enable old implementation of dgm::Animation ON )
 option ( BOOTSTRAP_CPM "Whether to download CPM" ON )
 option ( OVERRIDE_RUNTIME_OUTPUT_DIR "Specify value for CMAKE_RUNTIME_OUTPUT_DIRECTORY variable" ON )
 option ( DONT_LOOK_FOR_SFML "Don't look for SFML, use CPM to download it" OFF )
@@ -63,6 +64,7 @@ message ("  ENABLE_TESTS: ${ENABLE_TESTS}")
 message ("  ENABLE_SANDBOX: ${ENABLE_SANDBOX}")
 message ("  ENABLE_EXAMPLES: ${ENABLE_EXAMPLES}")
 message ("  ENABLE_LINTER: ${ENABLE_LINTER}")
+message ("  ENABLE_LEGACY_ANIMATION: ${ENABLE_LEGACY_ANIMATION}" )
 message ("  BOOTSTRAP_CPM: ${BOOTSTRAP_CPM}")
 message ("  OVERRIDE_RUNTIME_OUTPUT_DIR: ${OVERRIDE_RUNTIME_OUTPUT_DIR}")
 message ("  DONT_LOOK_FOR_SFML: ${DONT_LOOK_FOR_SFML}")
